--- a/views/about.pug
+++ b/views/about.pug
@@ -8,7 +8,7 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Joseph Chauvin
 
         //- Feel free personalize the title below
         p.lead.text-light
@@ -17,31 +17,35 @@ block content
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | Everyone goes through a phase in life where they have no idea what kind of job they would like to have when they grow older. Like everyone else I came up with a formulaic response when people asked me this question. 
+            | "I really want to be a civil engineer". Now, I had absolutely no clue what engineers do, not to mention 'civil' engineers, but I had to get them off my back when they asked the question. When I grew older I started to 
+            | realize that maybe I need to start learning about the kind of jobs I want to have when I grow up. I did much research about jobs that were good quality jobs, that might fit my personality. After a long period of time I decided that I was willing to tackle the challenge of learning how to code, 'maybe coding is for me', I thought.
+            | I certainly wanted to learn something that I wouldn't have to wait until college to learn! So like a lot of people, I started learning HTML, CSS, and JavaScript and quickly realized that I love to code! Ever since then it's been a non-stop journey of learning these new cool programming concepts.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li Node.js
+          li JavaScript
+          li jQuery
+          li HTML 
+          li CSS
+          li Version Control
+          li Debugging with dev tools
+          li HTTP
+          li AJAX
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 832-205-6360
+          li joseph.chauvin102@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/joseph-chauvin-533474192/') LinkedIn
+        a.button.expanded(href='https://github.com/Joseph765') GitHub
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
