--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,18 +14,18 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/static/images/profile-picture.png')
           .cell.auto
-
+ 
             //- Add your name here.
-            h5 Name
+            h5 Joseph Chauvin
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | Description
+              | My name is Joseph Chauvin and I'm a full stack JavaScript Web Delevoper!
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
@@ -37,7 +37,7 @@ html(class="no-js" lang="en" dir="ltr")
       block content
         
 
-      
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js")    
   script(src='/static/js/vendor/jquery.js')
   script(src='/static/js/vendor/what-input.js')
   script(src='/static/js/vendor/foundation.js')
