--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,10 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 Heading
+      h1 Hey, Potential Employers, or Let's make the web great together!
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
-      p.lead.text-light
-        | Portfolio Description
+      p.lead.text-light Welcome to my portfolio! The purpose of this portfolio is to show off my JavaScript skills, and showcase projects that I have made over the course of my learning.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
@@ -20,8 +19,14 @@ block content
       
       //- Here's what the Pug for each project example should look like. 
 
-      .cell
-        a(href='#')
-          img.thumbnail(src='https://placehold.it/550x550')
-          h5 Title
+      //- .cell
+      //-   a(href='#')
+      //-     img.thumbnail(src='https://placehold.it/550x550')
+      //-     h5 Title
+
+      each project, index in projects
+        .cell.hidden
+          a(href=`/project/${index}`)
+            img.thumbnail(src=`/static/images/screenshot-${index}.png`)
+            h5= project_name
       
